Fix horizontal scrolling on mobile

--- a/src/globals.css
+++ b/src/globals.css
@@ -4,6 +4,11 @@
 
 html {
   --line-color: #e5e7eb;
+  overflow-x: hidden;
+}
+
+body {
+  overflow-x: hidden;
 }
 
 html.dark {
